--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -2,7 +2,14 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Adicionar esta cidade aos favoritos"
+    <item android:title="Favoritos"
+        android:id="@+id/menu_favorites"
+        app:showAsAction="always"
+        android:icon="@android:drawable/btn_star_big_off"
+        />
+
+    <item
+        android:title="Adicionar esta cidade aos favoritos"
         android:id="@+id/menu_favorite_city"
         app:showAsAction="always"
         android:icon="@android:drawable/ic_menu_save"
